--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <a href="#contacts">Контакты</a>
         </li>
       </ul>
-      <a href="tel +7 (812) 812-12-12">+7 (812) 812-12-12</a>
+      <a href="tel +7(812)8121212">+7 (812) 812-12-12</a>
       <section class="social">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul>
