--- a/2/index.html
+++ b/2/index.html
@@ -4,44 +4,71 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
-    <link rel="stylesheet" href="catalog.html">
+    <link rel="stylesheet" href="">
     <base href="https://htmlacademy-htmlcss.github.io/1791887-device-35/2/">
 </head>
 
   <body>
     <header>
+      <h1 class="visually-hidden"> Интернет-магазин: Девайс</h1>
       <nav>
-        <h1 class="visually-hidden"> Интернет-магазин: Девайс</h1>
         <a class="logo-link" href="#">
-          <img class="logo" src="" alt="Логотип сайта Девайс">
+          <img class="logo" src="" alt="Логотип сайта Девайс.">
         </a>
-        <form class="search-form" action="#" metod="post">
-          <input type="search" placeholder="Поиск по сайту">
+        <form class="search-form" action="#" method="post">
+          <label class="visually-hidden" for="search">Поиск по сайту</label>
+          <input type="search" id="search" placeholder="Поиск по сайту">
         </form>
         <button class="search-button" type="submit">Найти</button>
-        <a class="user-link enter" href="#">Войти</a>
 
-        <ul class="user-interface">
-          <li>
+        <ul class="user-interface-list">
+          <li class="user-interface-item">
+            <a class="user-link enter" href="#">Войти</a>
+          </li>
+          <li class="user-interface-item">
             <a href="#">Сравнить</a>
           </li>
-          <li>
+          <li class="user-interface-item">
             <a href="#"> Корзина</a>
             <span class="goods-amount">2</span>
           </li>
         </ul>
-        <section class="catalog-items">
+        <section class="catalog-navigation-list">
           <h2 class="visually-hidden">Каталог товаров</h2>
           <a class="link" href="catalog.html">Каталог товаров</a>
+          <ul class="catalog-navigation-items">
+            <li class="catalog-navigation-link">
+              <a href="#">Виртуальная реальность</a>
+            </li>
+            <li class="catalog-navigation-link">
+              <a href="#">Моноподы для cелфи</a>
+            </li>
+            <li class="catalog-navigation-link">
+              <a href="#">Экшн-камеры</a>
+            </li>
+          </ul>
+          <ul class="catalog-navigation-items">
+            <li class="catalog-navigation-link">
+              <a href="#">Фитнес-браслеты</a>
+            </li>
+            <li class="catalog-navigation-link">
+              <a href="#">Умные часы</a>
+            </li>
+          </ul>
+          <ul class="catalog-navigation-items">
+            <li class="catalog-navigation-link">
+              <a href="#">Квадрокоптеры</a>
+            </li>
+          </ul>
           <ul class="shop-services">
-            <li class="link">
-              <a href="#">Доставка</a>
+            <li class="shop-services-item">
+              <a class="shop-services-link" href="#">Доставка</a>
             </li>
-            <li class="link">
-              <a href="#">Гарантия</a>
+            <li class="shop-services-item">
+              <a class="shop-services-link" href="#">Гарантия</a>
             </li>
-            <li class="link">
-              <a href="#contacts">Контакты</a>
+            <li class="shop-services-item">
+              <a class="shop-services-link" href="#">Контакты</a>
             </li>
           </ul>
         </section>
@@ -49,125 +76,138 @@
     </header>
 
     <main>
-
-      <div class="slider-items">
-        <h3 class="visually-hidden">Описание товара</h3>
-        <img class="items" src="" alt="Товар квадрокоптер с лазером">
-        <p>Порхает как бабочка,<br>жалит как пчела!</p>
-        <p>Этот обычный, на первый взгляд, квадрокоптер оснащен<br>мощным лазером, замаскированным под стандартную
-          камеру.
-        </p>
-        <a class="button" href="#">Подробнее</a>
-
-        <div class="info-items">
-          <dl>
-            <dt>800 м</dt>
-            <dd>Дальность</dd>
-          </dl>
-          <dl>
-            <dt>50 м</dt>
-            <dd>Радиус поражения</dd>
-          </dl>
-        </div>
-
-        <div>
-          <h3 class="visually-hidden">Описание товара</h3>
-          <img class="items" src="" alt="Товар из списка наручный фитнес-браслет">
-          <p>Худеем<br>правильно!</p>
-          <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-          <a class="button" href="#">Подробнее</a>
-          <div>
-            <dl>
-              <dt>48 часов</dt>
-              <dd>Без подзарядки</dd>
-            </dl>
-          </div>
-        </div>
-
-        <div>
-          <h3 class="visually-hidden">Описание товара</h3>
-          <img class="items" src="" alt="Товар из списка селфи палка">
-          <p>Делай селфи,<br>как Бен Стиллер! </p>
-          <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего
-            5 кг.
-          </p>
-          <a class="button" href="#">Подробнее</a>
-          <div>
-            <dl>
-              <dt>8,5 м</dt>
-              <dd>Длина палки</dd>
-            </dl>
-            <dl>
-              <dt>5 кг</dt>
-              <dd>Вес палки</dd>
-            </dl>
-            <dl>
-              <dt>Карбон</dt>
-              <dd>Материал</dd>
-            </dl>
-          </div>
-        </div>
-      </div>
-
-      <section class="product-list">
-        <h2 class="visually-hidden">Категории товаров</h2>
-        <ul>
-          <li>
-            <a href="#">Виртуальная реальность</a>
-          </li>
-          <li>
-            <a href="#">Моноподы
-              для селфи</a>
-          </li>
-          <li>
-            <a href="#">Экшн-камеры</a>
-          </li>
-          <li>
-            <a href="#">Фитнес-браслеты</a>
-          </li>
-          <li>
-            <a href="#">Умные часы</a>
-          </li>
-          <li>
-            <a href="#">Квадрокоптеры</a>
+      <section class="sliders">
+        <h2 class="visually-hidden">Слайдер с товарами и их описанием</h2>
+        <ul class="sliders-list">
+          <li class="sliders-item">
+            <img class="items" src="" alt="Товар квадрокоптер с лазером">
+            <h3>Порхает как бабочка,<br>жалит как пчела!</h3>
+            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен<br>мощным лазером, замаскированным под стандартную
+              камеру.
+            </p>
+            <a class="button" href="#">Подробнее</a>
+            <div class="info-items">
+              <dl class="details-list">
+                <dt class="details">800 м</dt>
+                <dd class="details-description">Дальность</dd>
+              </dl>
+              <dl>
+                <dt class="details">50 м</dt>
+                <dd class="details-description">Радиус поражения</dd>
+              </dl>
+            </div>
           </li>
         </ul>
       </section>
 
-      <section class="services-info">
-        <h2 class="visually-hidden">Условия доставки, условия гарантий и кредитования</h2>
-        <ul>
-          <li>
-            <a href="#">Доставка</a>
-          </li>
-          <li>
-            <a href="#">Гарантия</a>
-          </li>
-          <li>
-            <a href="#">Кредит</a>
+      <section class="sliders">
+        <h2 class="visually-hidden">Слайдер с товарами и их описанием</h2>
+        <ul class="sliders-list">
+          <li class="sliders-item">
+            <img class="items" src="" alt="Товар из списка наручный фитнес-браслет">
+            <h3>Худеем<br>правильно!</h3>
+            <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+            <a class="button" href="#">Подробнее</a>
+            <div class="info-items">
+              <dl class="details-list">
+                <dt class="details">48 часов</dt>
+                <dd class="details-description">Без подзарядки</dd>
+              </dl>
+            </div>
           </li>
         </ul>
-        <div class="delivery">
-          <p>Доставка</p>
-          <p>Мы с удовольствием доставим ваш товар прямо
-            к вашему подъезду совершенно бесплатно! Ведь.
-            мы неплохо заработаем, поднимая его на ваш этаж.</p>
-        </div>
-        <div class="warranty">
-          <p>Гарантия</p>
-          <p>Если из-за возгорания купленного у нас товара у вас
-            сгорит дом — не переживайте, мы выдадим вам новый.
-            Товар, не дом, конечно же.</p>
-        </div>
-        <div class="credit">
-          <p>Кредит</p>
-          <p>Залезть в долговую яму стало проще!
-            Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.
-          </p>
-        </div>
+      </section>
+
+      <section class="sliders">
+        <h2 class="visually-hidden">Слайдер с товарами и их описанием</h2>
+        <ul class="sliders-list">
+          <li class="sliders-item">
+            <img class="items" src="" alt="Товар из списка селфи палка">
+            <h3>Делай селфи,<br>как Бен Стиллер! </h3>
+            <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом
+              всего
+              5 кг.</p>
+            <a class="button" href="#">Подробнее</a>
+            <div class="info-items">
+              <dl class="details-list">
+                <dt class="details">8,5 м</dt>
+                <dd class="details-description">Длина палки</dd>
+              </dl>
+              <dl class="details-list">
+                <dt class="details">5 кг</dt>
+                <dd class="details-description">Вес палки</dd>
+              </dl>
+              <dl class="details-list">
+                <dt class="details">Карбон</dt>
+                <dd class="details-description">Материал</dd>
+              </dl>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <section class="products">
+        <h2 class="visually-hidden">Категории товаров</h2>
+        <ul class="products-list">
+          <li class="products-item">
+            <a class="products-link" href="#">Виртуальная реальность</a>
+          </li>
+          <li class="products-item">
+            <a class="products-link" href="#">Моноподы
+              для селфи</a>
+          </li>
+          <li class="products-item">
+            <a class="products-link" href="#">Экшн-камеры</a>
+          </li>
+          <li class="products-item">
+            <a class="products-link" href="#">Фитнес-браслеты</a>
+          </li>
+          <li class="products-item">
+            <a class="products-link" href="#">Умные часы</a>
+          </li>
+          <li class="products-item">
+            <a class="products-link" href="#">Квадрокоптеры</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="services">
+        <h2 class="visually-hidden">Условия доставки, условия гарантий и кредитования</h2>
+        <ul class="services-list">
+          <li class="services-item">
+            <a class="services-link" href="#">Доставка</a>
+          </li>
+          <li class="services-item">
+            <a class="services-link" href="#">Гарантия</a>
+          </li>
+          <li class="services-item">
+            <a class="services-link" href="#">Кредит</a>
+          </li>
+        </ul>
+        <ul class="info">
+          <li class="info-list">
+            <h3 class="delivery">Доставка</h3>
+            <p>Мы с удовольствием доставим ваш товар прямо
+              к вашему подъезду совершенно бесплатно! Ведь.
+              мы неплохо заработаем, поднимая его на ваш этаж.</p>
+          </li>
+          <li class="info-list">
+            <h3 class="warranty">Гарантия</h3>
+            <p>Если из-за возгорания купленного у нас товара у вас
+              сгорит дом — не переживайте, мы выдадим вам новый.
+              Товар, не дом, конечно же.</p>
+          </li>
+          <li class="info-list">
+            <h3 class="credit">Кредит</h3>
+            <p>Залезть в долговую яму стало проще!
+              Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.
+            </p>
+          </li>
+        </ul>
       </section>
 
       <section class="delivery-order">
+        <h2 class="visually-hidden">Преимущество нашей доставки</h2>
         <a>Доставим редкий товар под заказ
           <span class="visually-hidden">Информация</span>
         </a>
@@ -183,65 +223,64 @@
             Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:
           </p>
           <ul class="delivery-list">
-            <li>
-              <a href="#">Меловые линии</a>
+            <li class="delivery-list-item">
+              <span class="delivery-name">Меловые линии</span>
             </li>
-            <li>
-              <a href="#">СДИК</a>
+            <li class="delivery-list-item">
+              <span class="delivery-name">СДИК</span>
             </li>
-            <li>
-              <a href="#">ТоксБерри</a>
+            <li class="delivery-list-item">
+              <span class="delivery-name">ТоксБерри</span>
             </li>
           </ul>
           <a class="button" href="#">Подробнее о нас</a>
         </section>
 
-        <section class="contacts">
-          <h2 id="contacts">Контакты</h2>
-          <p>Вы можете забрать товар сами, заехав в наш офис. <br>
+        <section class="contacts-information">
+          <h2>Контакты</h2>
+          <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис. <br>
             Заодно сможете проверить работоспособность покупки. </p>
-          <h3>Интернет-магазин «Девайс»</h3>
-          <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-          <a href="tel +7 (812) 812-12-12">+7 (812) 812-12-12</a>
-          <h3>Время работы</h3>
-          <p>пн—пт: с 10:00 до 22:00 <br> сб—вс: с 10:00 до 19:00</p>
+          <h3 class="name-shop">Интернет-магазин «Девайс»</h3>
+          <p class="contact-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          <a class="contacts-phone" href="tel +7 (812) 812-12-12">+7 (812) 812-12-12</a>
+          <h3 class="operating-time">Время работы</h3>
+          <p class="operating-time-description">пн—пт: с 10:00 до 22:00 <br> сб—вс: с 10:00 до 19:00</p>
           <a class="button" href="#">Напишите нам</a>
         </section>
       </div>
 
       <section class="newsletter">
-        <h2 class="visually-hidden">Подписка на рассылку</h2>
-        <h2>Подпишитесь<br> на рассылку</h2>
-        <p>Еженедельный дайджест с обзорами новинок,<br>длительными
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Еженедельный дайджест с обзорами новинок, длительными
           тест-драйвами, распаковками,a также акции, спецпредложения и вот это вот всё.
         </p>
         <form action="https://echo.htmlacademy.ru/" method="post">
-          <label for="email">email</label>
+          <label class="visually-hidden" for="email">email</label>
           <input placeholder="Ваш e-mail" type="email" id="email" required>
         </form>
-        <button type="submit">Подписаться</button>
-        <p>Это бесплатно</p>
+        <button class="button-newsletter" type="submit">Подписаться</button>
+        <p class="newsletter-tick">Это бесплатно</p>
       </section>
     </main>
     <footer>
       <a class="footer-logo" href="#">
         <img src="" alt="Логотип магазина Девайс">
       </a>
-      <h2 class="visually-hidden"> Адресс магазина Девайс</h2>
+      <h2 class="visually-hidden"> Адрес магазина Девайс</h2>
       <p>Санкт-Петербург, набережная<br>
         реки Карповки, 5, литера П.</p>
       <ul class="footer-shop-services">
-        <li class="link">
-          <a href="#">Доставка</a>
+        <li class="footer-shop-services-list">
+          <a class="footer-shop-services-link" href="#">Доставка</a>
         </li>
-        <li class="link">
-          <a href="#">Гарантия</a>
+        <li class="footer-shop-services-list">
+          <a class="footer-shop-services-link" href="#">Гарантия</a>
         </li>
-        <li class="link">
-          <a href="#contacts">Контакты</a>
+        <li class="footer-shop-services-list">
+          <a class="footer-shop-services-link" href="#contacts">Контакты</a>
         </li>
       </ul>
-      <a href="tel +7(812)8121212">+7 (812) 812-12-12</a>
+      <a href="tel +78128121212">+7 (812) 812-12-12</a>
       <section class="social">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul>
@@ -260,7 +299,6 @@
         </div>
       </section>
     </footer>
-
   </body>
 
 </html>
