--- a/index.html
+++ b/index.html
@@ -79,69 +79,60 @@
         <h2 class="visually-hidden">Слайдер с товарами и их описанием</h2>
         <ul class="sliders-list">
           <li class="sliders-item">
-            <img class="items" src="images/slider-items/slider-quadcopter.png" width="560" height="560"
+            <img class="sliders-image" src="images/slider-items/slider-quadcopter.png" width="560" height="560"
               alt="Товар квадрокоптер с лазером.">
-            <h3>Порхает как бабочка,<br>жалит как пчела!</h3>
-            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен<br>мощным лазером, замаскированным под стандартную
-              камеру.
+            <h3 class="sliders-title">Порхает как бабочка,<br>жалит как пчела!</h3>
+            <p class="sliders-text"></p>Этот обычный, на первый взгляд, квадрокоптер оснащен<br>мощным лазером,
+            замаскированным под стандартную
+            камеру.
             </p>
-            <a class="button" href="#">Подробнее</a>
-            <div class="info-items">
-              <dl class="details-list">
-                <dt class="details">800 м</dt>
-                <dd class="details-description">Дальность</dd>
+            <a class="sliders-button" href="#">Подробнее</a>
+            <div class="sliders-info-items">
+              <dl class="sliders-details-list">
+                <dt class="sliders-details">800 м</dt>
+                <dd class="sliders-details-description">Дальность</dd>
               </dl>
-              <dl>
-                <dt class="details">50 м</dt>
-                <dd class="details-description">Радиус поражения</dd>
+              <dl class="sliders-details-list">
+                <dt class="sliders-details">50 м</dt>
+                <dd class="sliders-details-description">Радиус поражения</dd>
               </dl>
             </div>
           </li>
-        </ul>
-      </section>
-
-      <section class="sliders">
-        <h2 class="visually-hidden">Слайдер с товарами и их описанием</h2>
-        <ul class="sliders-list">
           <li class="sliders-item">
-            <img class="items" src="images/slider-items/slider-smart-bracelet.png" width="560" height="560"
+            <img class="sliders-image" src="images/slider-items/slider-smart-bracelet.png" width="560" height="560"
               alt="Товар из списка наручный фитнес-браслет.">
-            <h3>Худеем<br>правильно!</h3>
-            <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-            <a class="button" href="#">Подробнее</a>
-            <div class="info-items">
-              <dl class="details-list">
-                <dt class="details">48 часов</dt>
-                <dd class="details-description">Без подзарядки</dd>
+            <h3 class="sliders-title">Худеем<br>правильно!</h3>
+            <p class="sliders-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
+              соблюдать диету.</p>
+            <a class="sliders-button" href="#">Подробнее</a>
+            <div class="sliders-info-items">
+              <dl class="sliders-details-list">
+                <dt class="sliders-details">48 часов</dt>
+                <dd class="sliders-details-description">Без подзарядки</dd>
               </dl>
             </div>
           </li>
-        </ul>
-      </section>
-
-      <section class="sliders">
-        <h2 class="visually-hidden">Слайдер с товарами и их описанием</h2>
-        <ul class="sliders-list">
           <li class="sliders-item">
-            <img class="items" src="images/slider-items/slider-selfstick.png" width="560" height="560"
+            <img class="sliders-image" src="images/slider-items/slider-selfstick.png" width="560" height="560"
               alt="Товар из списка селфи палка.">
-            <h3>Делай селфи,<br>как Бен Стиллер! </h3>
-            <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом
+            <h3 class="sliders-title">Делай селфи,<br>как Бен Стиллер! </h3>
+            <p class="sliders-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
+              метров длиной и весом
               всего
               5 кг.</p>
-            <a class="button" href="#">Подробнее</a>
-            <div class="info-items">
-              <dl class="details-list">
-                <dt class="details">8,5 м</dt>
-                <dd class="details-description">Длина палки</dd>
+            <a class="sliders-button" href="#">Подробнее</a>
+            <div class="sliders-info-items">
+              <dl class="sliders-details-list">
+                <dt class="sliders-details">8,5 м</dt>
+                <dd class="sliders-details-description">Длина палки</dd>
               </dl>
-              <dl class="details-list">
-                <dt class="details">5 кг</dt>
-                <dd class="details-description">Вес палки</dd>
+              <dl class="sliders-details-list">
+                <dt class="sliders-details">5 кг</dt>
+                <dd class="sliders-details-description">Вес палки</dd>
               </dl>
-              <dl class="details-list">
-                <dt class="details">Карбон</dt>
-                <dd class="details-description">Материал</dd>
+              <dl class="sliders-details-list">
+                <dt class="sliders-details">Карбон</dt>
+                <dd class="sliders-details-description">Материал</dd>
               </dl>
             </div>
           </li>
@@ -188,20 +179,20 @@
         </ul>
         <ul class="info">
           <li class="info-list">
-            <h3 class="delivery">Доставка</h3>
-            <p>Мы с удовольствием доставим ваш товар прямо
+            <h3 class="delivery-title">Доставка</h3>
+            <p class="info-text">Мы с удовольствием доставим ваш товар прямо
               к вашему подъезду совершенно бесплатно! Ведь.
               мы неплохо заработаем, поднимая его на ваш этаж.</p>
           </li>
           <li class="info-list">
-            <h3 class="warranty">Гарантия</h3>
-            <p>Если из-за возгорания купленного у нас товара у вас
+            <h3 class="warranty-title">Гарантия</h3>
+            <p class="info-text">Если из-за возгорания купленного у нас товара у вас
               сгорит дом — не переживайте, мы выдадим вам новый.
               Товар, не дом, конечно же.</p>
           </li>
           <li class="info-list">
-            <h3 class="credit">Кредит</h3>
-            <p>Залезть в долговую яму стало проще!
+            <h3 class="credit-title">Кредит</h3>
+            <p class="info-text">Залезть в долговую яму стало проще!
               Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.
             </p>
           </li>
@@ -217,11 +208,11 @@
 
       <div class="information-container">
         <section class="about-us">
-          <h2>О нас</h2>
-          <p>Огромный выбор гаджетов не оставит равнодушным гика,<br>
+          <h2 class="about-us-title">О нас</h2>
+          <p class="about-us-text">Огромный выбор гаджетов не оставит равнодушным гика,<br>
             который есть в каждом из нас.
           </p>
-          <p>
+          <p class="about-us-text">
             Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:
           </p>
           <ul class="delivery-list">
@@ -239,12 +230,12 @@
         </section>
 
         <section class="contacts-information">
-          <h2>Контакты</h2>
+          <h2 class="contacts-title">Контакты</h2>
           <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис. <br>
             Заодно сможете проверить работоспособность покупки. </p>
           <h3 class="name-shop">Интернет-магазин «Девайс»</h3>
           <p class="contact-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-          <a class="contacts-phone" href="tel +7 (812) 812-12-12">+7 (812) 812-12-12</a>
+          <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           <h3 class="operating-time">Время работы</h3>
           <p class="operating-time-description">пн—пт: с 10:00 до 22:00 <br> сб—вс: с 10:00 до 19:00</p>
           <a class="button" href="#">Напишите нам</a>
@@ -252,8 +243,8 @@
       </div>
 
       <section class="newsletter">
-        <h2>Подпишитесь на рассылку</h2>
-        <p>Еженедельный дайджест с обзорами новинок, длительными
+        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <p class="newsletter-text">Еженедельный дайджест с обзорами новинок, длительными
           тест-драйвами, распаковками,a также акции, спецпредложения и вот это вот всё.
         </p>
         <form action="https://echo.htmlacademy.ru/" method="post">
@@ -269,7 +260,7 @@
         <img src="images/footer-logo.svg" width="145" height="36" alt="Логотип магазина Девайс.">
       </a>
       <h2 class="visually-hidden"> Адрес магазина Девайс</h2>
-      <p>Санкт-Петербург, набережная<br>
+      <p class="footer-adress-text">Санкт-Петербург, набережная<br>
         реки Карповки, 5, литера П.</p>
       <ul class="footer-shop-services">
         <li class="footer-shop-services-list">
@@ -282,7 +273,7 @@
           <a class="footer-shop-services-link" href="#">Контакты</a>
         </li>
       </ul>
-      <a href="tel +78128121212">+7 (812) 812-12-12</a>
+      <a href="tel:+78128121212">+7 (812) 812-12-12</a>
       <section class="social">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul>
