--- a/index.html
+++ b/index.html
@@ -88,61 +88,76 @@
           <h2 class="visually-hidden">Слайдер с товарами и их описанием</h2>
           <ul class="sliders-list">
             <li class="sliders-item">
-              <img class="sliders-image" src="images/slider-items/slider-quadcopter.png" width="560" height="560"
-                alt="Товар квадрокоптер с лазером.">
-              <h3 class="sliders-title">Порхает как бабочка,<br>жалит как пчела!</h3>
-              <p class="sliders-text">Этот обычный, на первый взгляд, квадрокоптер оснащен<br>мощным лазером,
-                замаскированным под стандартную
-                камеру.
-              </p>
-              <a class="button sliders-button" href="#">Подробнее</a>
-              <div class="sliders-info-items">
-                <dl class="sliders-details-list">
-                  <dt class="sliders-details">800 м</dt>
-                  <dd class="sliders-details-description">Дальность</dd>
-                </dl>
-                <dl class="sliders-details-list">
-                  <dt class="sliders-details">50 м</dt>
-                  <dd class="sliders-details-description">Радиус поражения</dd>
-                </dl>
+              <div class="slider-image">
+                <img class="sliders-image" src="images/slider-items/slider-quadcopter.png" width="560" height="560"
+                  alt="Товар квадрокоптер с лазером.">
+              </div>
+              <div class="slider-content-description">
+                <span class="slider-number">01</span>
+                <h3 class="sliders-title">Порхает как бабочка,<br>жалит как пчела!</h3>
+                <p class="sliders-text">Этот обычный, на первый взгляд, квадрокоптер оснащен<br>мощным лазером,
+                  замаскированным под стандартную
+                  камеру.
+                </p>
+                <a class="button sliders-button" href="#">Подробнее</a>
+                <div class="sliders-info-items">
+                  <dl class="sliders-details-list">
+                    <dt class="sliders-details">800 м</dt>
+                    <dd class="sliders-details-description">Дальность полета</dd>
+                  </dl>
+                  <dl class="sliders-details-list">
+                    <dt class="sliders-details">50 м</dt>
+                    <dd class="sliders-details-description">Радиус поражения</dd>
+                  </dl>
+                </div>
               </div>
             </li>
             <li class="sliders-item">
-              <img class="sliders-image" src="images/slider-items/slider-smart-bracelet.png" width="560" height="560"
-                alt="Товар из списка наручный фитнес-браслет.">
-              <h3 class="sliders-title">Худеем<br>правильно!</h3>
-              <p class="sliders-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
-                соблюдать диету.</p>
-              <a class="button sliders-button" href="#">Подробнее</a>
-              <div class="sliders-info-items">
-                <dl class="sliders-details-list">
-                  <dt class="sliders-details">48 часов</dt>
-                  <dd class="sliders-details-description">Без подзарядки</dd>
-                </dl>
+              <div class="slider-image">
+                <img class="sliders-image" src="images/slider-items/slider-smart-bracelet.png" width="560" height="560"
+                  alt="Товар из списка наручный фитнес-браслет.">
+              </div>
+              <div class="slider-content-description">
+                <span class="slider-number">02</span>
+                <h3 class="sliders-title">Худеем<br>правильно!</h3>
+                <p class="sliders-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
+                  соблюдать диету.</p>
+                <a class="button sliders-button" href="#">Подробнее</a>
+                <div class="sliders-info-items">
+                  <dl class="sliders-details-list">
+                    <dt class="sliders-details">48 часов</dt>
+                    <dd class="sliders-details-description">Без подзарядки</dd>
+                  </dl>
+                </div>
               </div>
             </li>
             <li class="sliders-item">
-              <img class="sliders-image" src="images/slider-items/slider-selfstick.png" width="560" height="560"
-                alt="Товар из списка селфи палка.">
-              <h3 class="sliders-title">Делай селфи,<br>как Бен Стиллер! </h3>
-              <p class="sliders-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
-                метров длиной и весом
-                всего
-                5 кг.</p>
-              <a class="button sliders-button" href="#">Подробнее</a>
-              <div class="sliders-info-items">
-                <dl class="sliders-details-list">
-                  <dt class="sliders-details">8,5 м</dt>
-                  <dd class="sliders-details-description">Длина палки</dd>
-                </dl>
-                <dl class="sliders-details-list">
-                  <dt class="sliders-details">5 кг</dt>
-                  <dd class="sliders-details-description">Вес палки</dd>
-                </dl>
-                <dl class="sliders-details-list">
-                  <dt class="sliders-details">Карбон</dt>
-                  <dd class="sliders-details-description">Материал</dd>
-                </dl>
+              <div class="slider-image">
+                <img class="sliders-image" src="images/slider-items/slider-selfstick.png" width="560" height="560"
+                  alt="Товар из списка селфи палка.">
+              </div>
+              <div class="slider-content-description">
+                <span class="slider-number">03</span>
+                <h3 class="sliders-title">Делай селфи,<br>как Бен Стиллер! </h3>
+                <p class="sliders-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
+                  метров длиной и весом
+                  всего
+                  5 кг.</p>
+                <a class="button sliders-button" href="#">Подробнее</a>
+                <div class="sliders-info-items">
+                  <dl class="sliders-details-list sliders-details-corrected">
+                    <dt class="sliders-details">8,5 м</dt>
+                    <dd class="sliders-details-description">Длина палки</dd>
+                  </dl>
+                  <dl class="sliders-details-list sliders-details-corrected">
+                    <dt class="sliders-details">5 кг</dt>
+                    <dd class="sliders-details-description">Вес палки</dd>
+                  </dl>
+                  <dl class="sliders-details-list sliders-details-corrected">
+                    <dt class="sliders-details">Карбон</dt>
+                    <dd class="sliders-details-description">Материал</dd>
+                  </dl>
+                </div>
               </div>
             </li>
           </ul>
@@ -154,22 +169,28 @@
           <h2 class="visually-hidden">Категории товаров</h2>
           <ul class="products-list">
             <li class="products-item">
+              <span class="product-card virtual-reality"></span>
               <a class="products-link" href="#">Виртуальная реальность</a>
             </li>
             <li class="products-item">
+              <span class="product-card monopod"></span>
               <a class="products-link" href="#">Моноподы
                 для селфи</a>
             </li>
             <li class="products-item">
+              <span class="product-card action-camera"></span>
               <a class="products-link" href="#">Экшн-камеры</a>
             </li>
             <li class="products-item">
+              <span class="product-card fitness-bracelet"></span>
               <a class="products-link" href="#">Фитнес-браслеты</a>
             </li>
             <li class="products-item">
+              <span class="product-card smart-watch"></span>
               <a class="products-link" href="#">Умные часы</a>
             </li>
             <li class="products-item">
+              <span class="product-card quadcopter"></span>
               <a class="products-link" href="#">Квадрокоптеры</a>
             </li>
           </ul>
@@ -184,7 +205,8 @@
               <a class="services-link services-link-current" href="#">Доставка</a>
             </li>
             <li class="services-item">
-              <a class="services-link" href="#">Гарантия</a>
+              <a class="services-link" href="#">
+                <span>Гарантия</span></a>
             </li>
             <li class="services-item">
               <a class="services-link" href="#">Кредит</a>
@@ -193,21 +215,21 @@
           <ul class="info">
             <li class="info-list">
               <h3 class="delivery-title">Доставка</h3>
-              <p class="info-text">Мы с удовольствием доставим ваш товар прямо
-                к вашему подъезду совершенно бесплатно! Ведь.
+              <p class="info-text">Мы с удовольствием доставим ваш товар прямо<br>
+                к вашему подъезду совершенно бесплатно! Ведь.<br>
                 мы неплохо заработаем, поднимая его на ваш этаж.</p>
             </li>
             <li class="info-list">
               <h3 class="delivery-title">Гарантия</h3>
-              <p class="info-text">Если из-за возгорания купленного у нас товара у вас
-                сгорит дом — не переживайте, мы выдадим вам новый.
+              <p class="info-text">Если из-за возгорания купленного у нас товара у вас<br>
+                сгорит дом — не переживайте, мы выдадим вам новый.<br>
                 Товар, не дом, конечно же.</p>
             </li>
             <li class="info-list">
               <h3 class="delivery-title">Кредит</h3>
-              <p class="info-text">Залезть в долговую яму стало проще!
-                Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка,
-                разумеется.
+              <p class="info-text">Залезть в долговую яму стало проще!<br>
+                Кредитные консультанты подберут для вас наиболее выгодные<br>
+                условия кредита. Выгодные для банка, разумеется.
               </p>
             </li>
           </ul>
@@ -226,11 +248,11 @@
       <div class="container contacts-delivery-container">
         <section class="about-us">
           <h2 class="title about-us-title">О нас</h2>
-          <p class="about-us-text">Огромный выбор гаджетов не оставит равнодушным гика,<br>
+          <p class="about-us-text">Огромный выбор гаджетов не оставит равнодушным <br> гика,
             который есть в каждом из нас.
           </p>
           <p class="about-us-text">
-            Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:
+            Мы можем доставить ваш товар в самые отдалённые <br> уголки России транспортными компаниями:
           </p>
           <ul class="delivery-list">
             <li class="delivery-list-item">
